Combines a small content page with its index.

--- a/content/wumpus/assignment.html
+++ b/content/wumpus/assignment.html
@@ -53,3 +53,18 @@ arrow (interesting engineering challenge!) or simply display an appropriate mess
 the LCD screen. After the robot shoots the arrow, the robot should move to a new square
 before getting a new signal. The game is lost when the robot moves into a square with a
 pit or the Wumpus, or when the robot goes off the board.
+
+
+# Resources
+
+* [Rules for the Wumpus World](http://www.cogsci.rpi.edu/~heuveb/Teaching/M&M/WumpusWorld/WumpusWorldRules.doc)
+* [Getting Started Technical Document](http://www.cogsci.rpi.edu/~heuveb/Teaching/M&M/WumpusWorld/GettingStarted.doc)
+* [Interactive C](http://www.cogsci.rpi.edu/~heuveb/Teaching/M&M/WumpusWorld/InteractiveC_8_0_2.exe)
+* [Driver for USB-to-Serial](http://www.cogsci.rpi.edu/~heuveb/Teaching/M&M/WumpusWorld/ProlificDriverInstaller.zip)
+* [Codes for Remote](http://www.cogsci.rpi.edu/~heuveb/Teaching/M&M/WumpusWorld/RemoteCodes.doc)
+* [Quick Interactive C Tutorial](http://www.cogsci.rpi.edu/~heuveb/Teaching/M&M/WumpusWorld/Tutorial.doc)
+* [Sample Interactive C programs](http://www.cogsci.rpi.edu/~heuveb/Teaching/M&M/WumpusWorld/examples.zip) (.zipped; includes sony-ir.icb file)
+* [Suggested Weekly Assignment Schedule](http://www.cogsci.rpi.edu/~heuveb/Teaching/M&M/WumpusWorld/WeeklySchedule.doc)
+* [Wumpus World Generator](http://wumpus.evanpatton.com/)
+* [Instructions for Write-Up](http://www.cogsci.rpi.edu/~heuveb/Teaching/M&M/WumpusWorld/RobotWriteup11.docx)
+
