Modifies site content

--- a/content/thursday.html
+++ b/content/thursday.html
@@ -15,102 +15,104 @@ A note on laptops: You are allowed to use your laptop, but only for taking notes
 ## Schedule
 
 <table class="table table-bordered table-condensed center">
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Topic</th>
+      <th>Speaker/Video/Movie</th>
+      <th>Presentation</th>
+    </tr>
+  </thead>
   <tbody>
     <tr>
-      <td width="6%"><strong><font size="4">Date</font></strong></td>
-      <td width="30%"><strong><font size="4">Topic</font></strong></td>
-      <td width="31%"><strong><font size="4">Speaker/Video/Movie</font></strong></td>
-      <td width="33%"><strong><font size="4">Presentation</font></strong></td>
+      <td>8/30</td>
+      <td>Minds and Machines and Cognitive Science</td>
+      <td>&nbsp;</td>
+      <td><a href="Talks/MMCogSci.pdf">Minds, Machines, and Cognitive Science</a></td>
     </tr>
     <tr>
-      <td class="Normal"><font size="4">8/30</font></td>
-      <td class="Normal"><font size="4">Minds and Machines and Cognitive Science</font></td>
-      <td class="Normal">&nbsp;</td>
-      <td><font size="4"><a href="Talks/MMCogSci.pdf">Minds, Machines, and Cognitive Science</a></font></td>
+      <td>9/6</td>
+      <td>Experience and Reality</td>
+      <td>Movie: <em>The Matrix</em></td>
+      <td><a href="Talks/BIV.pdf">Brains In A Vat</a></td>
     </tr>
     <tr>
-      <td><font size="4">9/6</font></td>
-      <td class="Normal"><font size="4">Experience and Reality</font></td>
-      <td class="Normal"><font size="4">Movie: The Matrix</font></td>
-      <td><font size="4"><a href="Talks/BIV.pdf">Brains In A Vat</a></font></td>
+      <td>9/13</td>
+      <td>Knowledge, Belief, and Evidence</td>
+      <td>Video: <em>Bullsh*t!</em></td>
+      <td><a href="Talks/Induction.pdf">Induction, and Causation</a></td>
     </tr>
     <tr>
-      <td class="Normal"><font size="4">9/13</font></td>
-      <td class="Normal"><p><font size="4">Knowledge, Belief, and Evidence</font></p></td>
-      <td class="Normal"><font size="4">Video: Bullsh*t!</font></td>
-      <td><font size="4"><a href="Talks/Induction.pdf">Induction, and Causation</a></font></td>
+      <td>9/20</td>
+      <td>Logic</td>
+      <td>Speaker: Selmer Bringsjord</td>
+      <td><a href="Talks/Logic11.pdf">Logic</a></td>
     </tr>
     <tr>
-      <td class="Normal"><font size="4">9/20</font></td>
-      <td class="Normal"><p><font size="4">Logic</font></p></td>
-      <td class="Normal"><font size="4">Speaker: Selmer Bringsjord</font></td>
-      <td><font size="4"><a href="Talks/Logic11.pdf">Logic</a></font></td>
+      <td>9/27</td>
+      <td>Free Will</td>
+      <td>Video: <em>Cassandra</em></td>
+      <td><a href="Talks/FreeWill.pdf">Free Will</a></td>
     </tr>
     <tr>
-      <td class="Normal"><font size="4">9/27</font></td>
-      <td class="Normal"><font size="4">Free Will</font></td>
-      <td class="Normal"><font size="4">Video: Cassandra</font></td>
-      <td><font size="4"><a href="Talks/FreeWill.pdf">Free Will</a></font></td>
+      <td>10/4</td>
+      <td>Personal Identity</td>
+      <td>Video: <em>Tuvix</em></td>
+      <td><a href="Talks/PersonalIdentity.pdf">Personal Identity</a></td>
     </tr>
     <tr>
-      <td class="Normal"><font size="4">10/4</font></td>
-      <td class="Normal"><p><font size="4">Personal Identity</font></p></td>
-      <td class="Normal"><font size="4">Video: Tuvix</font></td>
-      <td><font size="4"><a href="Talks/PersonalIdentity.pdf">Personal Identity</a></font></td>
+      <td>10/11</td>
+      <td>The Brain</td>
+      <td>Video: <em>Secrets of the Mind</em></td>
+      <td><a href="Talks/PerceptionBrainCsns2012.pptx">Brain, Perception, and Consciousness</a></td>
     </tr>
     <tr>
-      <td class="Normal"><font size="4">10/11</font></td>
-      <td width="30%" class="Normal"><p><font size="4">The Brain</font></p></td>
-      <td class="Normal"><font size="4">Video: Secrets of the Mind</font></td>
-      <td><font size="4"><a href="Talks/PerceptionBrainCsns2012.pptx">Brain, Perception, and Consciousness</a></font></td>
+      <td>10/18</td>
+      <td>Animal Minds and Animal Rights</td>
+      <td>Video: <em>Monkey in the Mirror</em></td>
+      <td><a href="Talks/BurgersAndPersons2012.pptx">Burgers and Persons</a><br>
+      handout: <a href="Talks/AnimalMachineRights2012.docx">Rights and Minds</a></td>
     </tr>
     <tr>
-      <td class="Normal"><font size="4">10/18</font></td>
-      <td class="Normal"><p><font size="4">Animal Minds and Animal Rights</font></p></td>
-      <td class="Normal"><font size="4">Video: Monkey in the Mirror</font></td>
-      <td><font size="4"><a href="Talks/BurgersAndPersons2012.pptx">Burgers and Persons</a><br>
-      handout: <a href="Talks/AnimalMachineRights2012.docx">Rights and Minds</a></font></td>
+      <td>10/25</td>
+      <td>Turing's Legacy</td>
+      <td>Video: <em>Data on Trial</em></td>
+      <td><a href="Talks/TuringLegacy2012.pdf">Turing's Legacy</a></td>
     </tr>
     <tr>
-      <td class="Normal"><font size="4">10/25</font></td>
-      <td width="30%" class="Normal"><p><font size="4">Turing's Legacy</font></p></td>
-      <td class="Normal"><font size="4">Video: Data on Trial</font></td>
-      <td><font size="4"><a href="Talks/TuringLegacy2012.pdf">Turing's Legacy</a></font></td>
-    </tr>
-    <tr>
-      <td class="Normal"><font size="4">11/1</font></td>
-      <td class="Normal"><font size="4">Cognition and Evolution</font></td>
-      <td class="Normal"><font size="4">Video: Brain Power</font></td>
+      <td>11/1</td>
+      <td>Cognition and Evolution</td>
+      <td>Video: <em>Brain Power</em></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td width="6%" class="Normal"><font size="4">11/8</font></td>
-      <td class="Normal"><font size="4">Rationality</font></td>
-      <td class="Normal">&nbsp;</td>
+      <td width="6%" class="Normal">11/8</td>
+      <td>Rationality</td>
+      <td>&nbsp;</td>
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td class="Normal"><font size="4">11/15</font></td>
-      <td class="Normal"><font size="4">Enough?</font></td>
-      <td class="Normal"><font size="4">Video: Transcendent Man</font></td>
+      <td>11/15</td>
+      <td>Enough?</td>
+      <td>Video: <em>Transcendent Man</em></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td class="Normal"><font size="4">11/22</font></td>
-      <td class="Normal"><font size="4">Thanksgiving! (no class)</font></td>
-      <td class="Normal">&nbsp;</td>
+      <td>11/22</td>
+      <td>Thanksgiving! (no class)</td>
+      <td>&nbsp;</td>
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td class="Normal"><font size="4">11/29</font></td>
-      <td class="Normal"><font size="4">Autism</font></td>
-      <td class="Normal"><font size="4">Movie: Rain Man</font></td>
+      <td>11/29</td>
+      <td>Autism</td>
+      <td>Movie: <em>Rain Man</em></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td class="Normal"><font size="4">12/6</font></td>
-      <td class="Normal"><font size="4">Lego Robots Round-up!!!! </font></td>
-      <td class="Normal">&nbsp;</td>
+      <td>12/6</td>
+      <td>Lego Robots Round-up!!!!</td>
+      <td>&nbsp;</td>
       <td>&nbsp;</td>
     </tr>
   </tbody>
