--- a/content/syllabus.html
+++ b/content/syllabus.html
@@ -3,6 +3,14 @@ index: 2
 title: "Syllabus"
 ---
 
+<div class="hero-unit">
+  <p>This couse is an introduction to the philosophy of mind. Students will debate and write papers on the nature of mind, free will, personal identity, consciousness, artificial intelligence, and animal cognition. This is a communication-intensive course.</p>
+  <!-- above text from RPI Course Catalog, 2012-13 ed. -->
+  <p>Cognitive scientists build computational, formal, and quantitative models, conduct experimental research on behavior, and investigate neural mechanisms.</p>
+  <!-- above text from http://www.cogsci.rpi.edu/pl/cognitive-science -->
+  <div id="badge" style="background-image:url('http://placehold.it/64x64');"></div>
+</div>
+
 
 # Course Syllabus (Fall 2012)
 
@@ -14,7 +22,7 @@ title: "Syllabus"
       <th>Instructor</th>
       <th>Day/Time</th>
       <th>Room</th>
-      <th><a href="thursday.html">Thursday Night Session</a></th>
+      <th><a href="{{ content_url('thursday.html') }}">Thursday Night Session</a></th>
       <th>Office Hours</th>
       <th>Office</th>
       <th>Tel</th>
