--- a/content/thursday.html
+++ b/content/thursday.html
@@ -28,56 +28,56 @@ A note on laptops: You are allowed to use your laptop, but only for taking notes
       <td>8/30</td>
       <td>Minds and Machines and Cognitive Science</td>
       <td>&nbsp;</td>
-      <td><a href="Talks/MMCogSci.pdf">Minds, Machines, and Cognitive Science</a></td>
+      <td><a href="http://www.cogsci.rpi.edu/~heuveb/Teaching/M&amp;M/Talks/MMCogSci.pdf">Minds, Machines, and Cognitive Science</a></td>
     </tr>
     <tr>
       <td>9/6</td>
       <td>Experience and Reality</td>
       <td>Movie: <em>The Matrix</em></td>
-      <td><a href="Talks/BIV.pdf">Brains In A Vat</a></td>
+      <td><a href="http://www.cogsci.rpi.edu/~heuveb/Teaching/M&amp;M/Talks/BIV.pdf">Brains In A Vat</a></td>
     </tr>
     <tr>
       <td>9/13</td>
       <td>Knowledge, Belief, and Evidence</td>
       <td>Video: <em>Bullsh*t!</em></td>
-      <td><a href="Talks/Induction.pdf">Induction, and Causation</a></td>
+      <td><a href="http://www.cogsci.rpi.edu/~heuveb/Teaching/M&amp;M/Talks/Induction.pdf">Induction, and Causation</a></td>
     </tr>
     <tr>
       <td>9/20</td>
       <td>Logic</td>
       <td>Speaker: Selmer Bringsjord</td>
-      <td><a href="Talks/Logic11.pdf">Logic</a></td>
+      <td><a href="http://www.cogsci.rpi.edu/~heuveb/Teaching/M&amp;M/Talks/Logic11.pdf">Logic</a></td>
     </tr>
     <tr>
       <td>9/27</td>
       <td>Free Will</td>
       <td>Video: <em>Cassandra</em></td>
-      <td><a href="Talks/FreeWill.pdf">Free Will</a></td>
+      <td><a href="http://www.cogsci.rpi.edu/~heuveb/Teaching/M&amp;M/Talks/FreeWill.pdf">Free Will</a></td>
     </tr>
     <tr>
       <td>10/4</td>
       <td>Personal Identity</td>
       <td>Video: <em>Tuvix</em></td>
-      <td><a href="Talks/PersonalIdentity.pdf">Personal Identity</a></td>
+      <td><a href="http://www.cogsci.rpi.edu/~heuveb/Teaching/M&amp;M/Talks/PersonalIdentity.pdf">Personal Identity</a></td>
     </tr>
     <tr>
       <td>10/11</td>
       <td>The Brain</td>
       <td>Video: <em>Secrets of the Mind</em></td>
-      <td><a href="Talks/PerceptionBrainCsns2012.pptx">Brain, Perception, and Consciousness</a></td>
+      <td><a href="http://www.cogsci.rpi.edu/~heuveb/Teaching/M&amp;M/Talks/PerceptionBrainCsns2012.pptx">Brain, Perception, and Consciousness</a></td>
     </tr>
     <tr>
       <td>10/18</td>
       <td>Animal Minds and Animal Rights</td>
       <td>Video: <em>Monkey in the Mirror</em></td>
-      <td><a href="Talks/BurgersAndPersons2012.pptx">Burgers and Persons</a><br>
-      handout: <a href="Talks/AnimalMachineRights2012.docx">Rights and Minds</a></td>
+      <td><a href="http://www.cogsci.rpi.edu/~heuveb/Teaching/M&amp;M/Talks/BurgersAndPersons2012.pptx">Burgers and Persons</a><br>
+      handout: <a href="http://www.cogsci.rpi.edu/~heuveb/Teaching/M&amp;M/Talks/AnimalMachineRights2012.docx">Rights and Minds</a></td>
     </tr>
     <tr>
       <td>10/25</td>
       <td>Turing's Legacy</td>
       <td>Video: <em>Data on Trial</em></td>
-      <td><a href="Talks/TuringLegacy2012.pdf">Turing's Legacy</a></td>
+      <td><a href="http://www.cogsci.rpi.edu/~heuveb/Teaching/M&amp;M/Talks/TuringLegacy2012.pdf">Turing's Legacy</a></td>
     </tr>
     <tr>
       <td>11/1</td>
@@ -86,7 +86,7 @@ A note on laptops: You are allowed to use your laptop, but only for taking notes
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td width="6%" class="Normal">11/8</td>
+      <td>11/8</td>
       <td>Rationality</td>
       <td>&nbsp;</td>
       <td>&nbsp;</td>
