--- a/content/wumpus/assignment.html
+++ b/content/wumpus/assignment.html
@@ -4,8 +4,9 @@ title: "Assignment"
 ---
 
 <div class="hero-unit">
-  At the end of this course, selected and interested students will have the opportunity to build a Lego robot to solve the Wumpus World Problem for their final project. The problem here is to build a robot that moves around in a 4x4 grid, and use the clues that can be found in the grid to get to the gold, and get back home safely, without running into any of the pits or the awfully smelling Wumpus! This problem requires students to think about perception, action, reasoning, and decision making. It is a non-trivial problem, and each year only few teams are successful!
-  <i class="gen-enclosed foundicon-idea"></i>
+  <p>At the end of this course, selected and interested students have the opportunity to build a <strong>LEGO robot</strong> to solve the <strong>Wumpus World Problem</strong>&#8211; in a 4x4 grid filled with clues and hazards, the robot must <strong>autonomously get the gold and return home safely</strong>. This problem requires students to think about perception, action, reasoning, and decision making. It is a <strong>non-trivial problem</strong>, and each year only a few teams are successful!</p>
+  <!-- above text adapted from http://www.cogsci.rpi.edu/~heuveb/Teaching/M&M/WumpusWorld/WumpusWorld.htm -->
+  <div id="badge" style="background-image:url('http://placehold.it/64x64');"></div>
 </div>
 
 
