Restructures Site to Reflect 16 OCT Meeting with @Bram28 Renames 'Wumpus World' site section to 'Final Project', combines all Wumpus World assigment info onto one page, and adds pages for the 2 other final projects. Adds new site section for documentation of the Connect 4 Moderator.

--- a/content/index.html
+++ b/content/index.html
@@ -29,7 +29,7 @@ If you are interested in exploring some of these conceptual and ethical question
     <img src="http://placehold.it/270x120" alt="placeholder" />
   </div>
   <div class="span9">
-    <h1>Minds &amp; Machines</h1>
+    <h1>Minds &amp; Machines at Rensselaer Polytechnic Institute</h1>
     <p>Students in this course <strong>explore the nature of reasoning, perception, and learning</strong>, develop computational cognitive models, create intelligent artificial agents, engineer cognitive technology, and address philosophical questions about the fundamental nature of the human mind. <a href="{{ content_url('syllabus.html') }}">Read the Syllabus &raquo;</a></p>
     <!-- above text adapted from http://www.rpi.edu/academics/interdisciplinary/mindsmachines.html -->
   </div>
