Adds some more real content.

--- a/content/final-projects/connect4.html
+++ b/content/final-projects/connect4.html
@@ -1,13 +1,20 @@
 ---
 index: 2
 title: "Connect 4 Tournament"
+description: Students have the opportunity to program their own Connect 4 AI programs which compete in a tournament moderated by a really shiny program.
 ---
 
 <div class="hero-unit">
-  <p>At the end of this course, selected and interested students will have the opportunity to program their own <strong>Connect 4 AI player</strong>. The Connect 4 AIs will compete against each other in a Connect 4 tournament that will be held during the night of the LEGO Robot Round-Up. The AI programs will be moderated by a program that will simply tell the AIs what move their opponent made and ask them what move they want to make in response.</p>
+  <p>Students have the opportunity to program their own <strong>Connect 4 AI programs</strong> which compete in a tournament moderated by a really shiny program.</p>
   <!-- above text adapted from http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&M/Connect4/Connect4.htm -->
   <div id="badge" style="background-image:url('http://placehold.it/64x64');"></div>
 </div>
+
+
+# The _Connect 4_ Tournament
+
+At the end of this course, selected and interested students will have the opportunity to program their own Connect 4 AI player. The Connect 4 AI's will compete against each other in a Connect 4 tournament that will be held during the night of the LEGO Robot Round-Up. The AI programs will be moderated by a program that will simply tell the AI's what move their opponent made and ask them what move they want to make in response.
+
 
 # Resources
 
