--- a/content/syllabus.html
+++ b/content/syllabus.html
@@ -4,17 +4,15 @@ title: "Syllabus"
 ---
 
 <div class="hero-unit">
-  <p>This couse is an introduction to the philosophy of mind. Students will debate and write papers on the nature of mind, free will, personal identity, consciousness, artificial intelligence, and animal cognition. This is a communication-intensive course.</p>
+  <p>This couse is an introduction to the philosophy of mind. Students will debate and write papers on the nature of mind, free will, personal identity, consciousness, artificial intelligence, and animal cognition.</p>
   <!-- above text from RPI Course Catalog, 2012-13 ed. -->
-  <p>Cognitive scientists build computational, formal, and quantitative models, conduct experimental research on behavior, and investigate neural mechanisms.</p>
-  <!-- above text from http://www.cogsci.rpi.edu/pl/cognitive-science -->
   <div id="badge" style="background-image:url('http://placehold.it/64x64');"></div>
 </div>
 
 
 # Course Syllabus (Fall 2012)
 
-<table class="table table-bordered table-condensed center">
+<table class="table table-bordered table-condensed">
   <thead>
     <tr>
       <th>Section</th>
@@ -24,83 +22,62 @@ title: "Syllabus"
       <th>Room</th>
       <th><a href="{{ content_url('thursday.html') }}">Thursday Night Session</a></th>
       <th>Office Hours</th>
-      <th>Office</th>
-      <th>Tel</th>
-      <th>E-mail</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <td>01</td>
       <td>85513</td>
-      <td>Milanese</td>
+      <td><a href="mailto:milanj3@rpi.edu">Milanese</a></td>
       <td>M R 10:00-11:20</td>
       <td>Sage 2707</td>
-      <td>R 7:00-8:20<br>Sage 3303</td>
-      <td>&nbsp;</td>
+      <td>R 7:00-8:20 <br>Sage 3303</td>
       <td>Carnegie 301E</td>
-      <td>&nbsp;</td>
-      <td>milanj3@rpi.edu</td>
     </tr>
     <tr>
       <td>02</td>
       <td>85514</td>
-      <td>Krueger</td>
+      <td><a href="mailto:kruegd2@rpi.edu">Krueger</a></td>
       <td>M R 12:00-1:20</td>
       <td><p>Carnegie 210</p></td>
-      <td>R 7:00-8:20<br/>Sage 3303</td>
-      <td>R 10-12</td>
-      <td>Carnegie 301E</td>
-      <td>&nbsp;</td>
-      <td>kruegd2@rpi.edu</td>
+      <td>R 7:00-8:20 <br/>Sage 3303</td>
+      <td>Carnegie 301E, R 10-12</td>
     </tr>
     <tr>
       <td>03</td>
       <td>85515</td>
-      <td>van Heuveln</td>
+      <td><a href="mailto:heuveb@rpi.edu">van Heuveln</a> <br/>(tel x3316)</td>
       <td>M R 2:00-3:20</td>
       <td>Darrin 239</td>
-      <td>R 7:00-8:20<br/>Sage 3303</td>
-      <td>W 9-11</td>
-      <td>Carnegie 302D</td>
-      <td>x3316</td>
-      <td>heuveb@rpi.edu</td>
+      <td>R 7:00-8:20 <br/>Sage 3303</td>
+      <td>Carnegie 302D, W 9-11</td>
     </tr>
     <tr>
       <td>04</td>
       <td>85516</td>
-      <td>Krueger</td>
+      <td><a href="mailto:kruegd2@rpi.edu">Krueger</a></td>
       <td>M R 2:00-3:20</td>
       <td>Carnegie 210</td>
-      <td>R 7:00-8:20<br/>Sage 3303</td>
-      <td>R 10-12</td>
-      <td>Carnegie 301E</td>
-      <td>&nbsp;</td>
-      <td>kruegd2@rpi.edu</td>
+      <td>R 7:00-8:20 <br/>Sage 3303</td>
+      <td>Carnegie 301E, R 10-12</td>
     </tr>
     <tr>
       <td>05</td>
       <td>85516</td>
-      <td>Milanese</td>
+      <td><a href="mailto:milanj3@rpi.edu">Milanese</a></td>
       <td>M R 4:00-5:20</td>
       <td>Carnegie 106</td>
-      <td>R 7:00-8:20<br/>Sage 3303</td>
-      <td>&nbsp;</td>
+      <td>R 7:00-8:20 <br/>Sage 3303</td>
       <td>Carnegie 301E</td>
-      <td>&nbsp;</td>
-      <td>milanj3@rpi.edu</td>
     </tr>
     <tr>
       <td>06</td>
       <td>85517</td>
-      <td>van Heuveln</td>
+      <td><a href="mailto:heuveb@rpi.edu">van Heuveln</a> <br/>(tel x3316)</td>
       <td>M R 4:00-5:20</td>
       <td>Sage 2707</td>
-      <td>R 7:00-8:20<br/>Sage 3303</td>
-      <td>W 9-11</td>
-      <td>Carnegie 302D</td>
-      <td>x3316</td>
-      <td>heuveb@rpi.edu</td>
+      <td>R 7:00-8:20 <br/>Sage 3303</td>
+      <td>Carnegie 302D, W 9-11</td>
     </tr>
   </tbody>
 </table>
@@ -150,117 +127,27 @@ There are three different instructors for this course. Despite their best effort
 
 The course will follow the following schedule of topics:
 
-**Part I - Philosophy, Critical Thinking, Arguments, and Logic**
-
-<table class="table table-bordered table-condensed">
-  <thead>
-    <tr>
-      <th>Week</th>
-      <th>Topic</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>1</td>
-      <td>Philosophy and Critical Thinking</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>Logic and Fallacies</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>The Mind-Body Problem</td>
-    </tr>
-  </tbody>
-</table>
-
-**Part II - Classical Philosophy of Mind**
-
-<table class="table table-bordered table-condensed">
-  <thead>
-    <tr>
-      <th>Week</th>
-      <th>Topic</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>4</td>
-      <td>Free Will</td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>Personal Identity</td>
-    </tr>
-    <tr>
-      <td>6</td>
-      <td>The Brain and Consciousness</td>
-    </tr>
-  </tbody>
-</table>
-
-**Part III - Animal and Machine Minds**
-
-<table class="table table-bordered table-condensed">
-  <thead>
-    <tr>
-      <th>Week</th>
-      <th>Topic</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>7</td>
-      <td>Animal Minds</td>
-    </tr>
-    <tr>
-      <td>8</td>
-      <td>Machine Minds</td>
-    </tr>
-    <tr>
-      <td>9</td>
-      <td>Engineered Minds</td>
-    </tr>
-  </tbody>
-</table>
-
-**Part IV - Kinds of Minds**
-
-<table class="table table-bordered table-condensed">
-  <thead>
-    <tr>
-      <th>Week</th>
-      <th>Topic</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>10</td>
-      <td>Future Minds - I</td>
-    </tr>
-    <tr>
-      <td>11</td>
-      <td>Future Minds - II</td>
-    </tr>
-    <tr>
-      <td>12</td>
-      <td>Female Minds and Male Minds</td>
-    </tr>
-    <tr>
-      <td>13</td>
-      <td>Thanksgiving Break!</td>
-    </tr>
-    <tr>
-      <td>14</td>
-      <td>Autistic Minds</td>
-    </tr>
-    <tr>
-      <td>15</td>
-      <td><a href="wumpus/assignment.html">LEGO Robot Round-Up!</a></td>
-    </tr>
-  </tbody>
-</table>
+<dl class="dl-horizontal">
+  <dt>Part I</dt>   <dd><strong>Philosophy, Critical Thinking, Arguments, and Logic</strong></dd>
+  <dt>Week 1</dt>   <dd>Philosophy and Critical Thinking</dd>
+  <dt>Week 2</dt>   <dd>Logic and Fallacies</dd>
+  <dt>Week 3</dt>   <dd>The Mind-Body Problem</dd>
+  <dt>Part II</dt>  <dd><strong>Classical Philosophy of Mind</strong></dd>
+  <dt>Week 4</dt>   <dd>Free Will</dd>
+  <dt>Week 5</dt>   <dd>Personal Identity</dd>
+  <dt>Week 6</dt>   <dd>The Brain and Consciousness</dd>
+  <dt>Part III</dt> <dd><strong>Animal and Machine Minds</strong></dd>
+  <dt>Week 7</dt>   <dd>Animal Minds</dd>
+  <dt>Week 8</dt>   <dd>Machine Minds</dd>
+  <dt>Week 9</dt>   <dd>Engineered Minds</dd>
+  <dt>Part IV</dt>  <dd><strong>Kinds of Minds</strong></dd>
+  <dt>Week 10</dt>  <dd>Future Minds - I</dd>
+  <dt>Week 11</dt>  <dd>Future Minds - II</dd>
+  <dt>Week 12</dt>  <dd>Female Minds and Male Minds</dd>
+  <dt>Week 13</dt>  <dd>Thanksgiving Break!</dd>
+  <dt>Week 14</dt>  <dd>Autistic Minds</dd>
+  <dt>Week 15</dt>  <dd><a href="{{ content_url('final-projects/wumpus-world.html') }}">LEGO Robot Round-Up!</a></dd>
+</dl>
 
 
 ## Assignments
