--- a/content/thursday.html
+++ b/content/thursday.html
@@ -1,11 +1,11 @@
 ---
 index: 3
 title: "Thursday Night Lectures"
+description: On thursday nights all 5 sections come together and listen to a lecture and/or watch a movie or video pertaining to the material as discussed that week or the next week.
 ---
 
 
 # Thursday Night Lectures (Fall 2012)
-
 
 On thursday nights all 5 sections come together and listen to a lecture and/or watch a movie or video pertaining to the material as discussed that week or the next week.
 
@@ -14,7 +14,7 @@ A note on laptops: You are allowed to use your laptop, but only for taking notes
 
 ## Schedule
 
-<table class="table table-bordered table-condensed center">
+<table class="table table-bordered table-condensed">
   <thead>
     <tr>
       <th>Date</th>
@@ -83,7 +83,7 @@ A note on laptops: You are allowed to use your laptop, but only for taking notes
       <td>11/1</td>
       <td>Cognition and Evolution</td>
       <td>Video: <em>Brain Power</em></td>
-      <td>&nbsp;</td>
+      <td><a href="http://www.cogsci.rpi.edu/public_html/heuveb/Teaching/M&M/Talks/EvolutionCognition2012.pptx">Evolution and Cognition</a></td>
     </tr>
     <tr>
       <td>11/8</td>
